Fixed title screen spacing

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,8 @@ body,
 .title-logo {
   width: 85%;
   max-width: 420px;
+  position: relative;
+  top: -80px;
   margin-bottom: 50px;
   user-select: none;
   pointer-events: none;
